# test_gjk_witness_points_modified_2

test_gjk_witness_points_modified/: CMakeLists.txt
test_gjk_witness_points_modified/example1_c/: CMakeLists.txt  main.c
test_gjk_witness_points_modified/lib/: CMakeLists.txt
test_gjk_witness_points_modified/lib/include/openGJK/: openGJK.h
test_gjk_witness_points_modified/lib/src/: openGJK.c
